--- a/doc/source/getting_started/introduction.ipynb
+++ b/doc/source/getting_started/introduction.ipynb
@@ -319,7 +319,7 @@
    "source": [
     "# saving the first plot as an axis and setting alpha (transparency) to 0.5\n",
     "ax = gdf[\"convex_hull\"].plot(alpha=0.5)\n",
-    "# passing the first plot and setting linewitdth to 0.5\n",
+    "# passing the first plot and setting linewidth to 0.5\n",
     "gdf[\"boundary\"].plot(ax=ax, color=\"white\", linewidth=0.5)"
    ]
   },
@@ -355,7 +355,7 @@
     "ax = gdf[\"buffered\"].plot(alpha=0.5)\n",
     "# passing the first plot as an axis to the second\n",
     "gdf[\"buffered_centroid\"].plot(ax=ax, color=\"red\", alpha=0.5)\n",
-    "# passing the first plot and setting linewitdth to 0.5\n",
+    "# passing the first plot and setting linewidth to 0.5\n",
     "gdf[\"boundary\"].plot(ax=ax, color=\"white\", linewidth=0.5)"
    ]
   },
@@ -457,7 +457,7 @@
     "ax = gdf.plot(\n",
     "    \"within\", legend=True, categorical=True, legend_kwds={\"loc\": \"upper left\"}\n",
     ")\n",
-    "# passing the first plot and setting linewitdth to 0.5\n",
+    "# passing the first plot and setting linewidth to 0.5\n",
     "gdf[\"boundary\"].plot(ax=ax, color=\"black\", linewidth=0.5)"
    ]
   },
